[gd_scene load_steps=5 format=3 uid="uid://ccim6t4jtaxsb"]

[ext_resource type="Script" path="res://scripts/battle/ui/BattleEnd/VictoryUI.gd" id="1_3emos"]
[ext_resource type="Theme" uid="uid://brsvqpkn34kxe" path="res://themes/guiTheme.tres" id="1_fgy2r"]
[ext_resource type="FontFile" uid="uid://chvqhhsv3883r" path="res://resource/fonts/kirifont/KiriFont.ttf" id="2_xvr60"]
[ext_resource type="Texture2D" uid="uid://b4tlhj27xqekg" path="res://sourceArt/Icons/arrowLeft.png" id="5_somnn"]

[node name="VictoryUI" type="Control"]
self_modulate = Color(0.380392, 0.301961, 0.301961, 1)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3emos")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -165.0
offset_top = 205.0
offset_right = 166.0
offset_bottom = 265.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("1_fgy2r")
theme_type_variation = &"HeaderMedium"
theme_override_colors/font_color = Color(1, 0.670588, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_xvr60")
theme_override_font_sizes/font_size = 60
text = "VICTORY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VictoryGridContainer" type="GridContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -32.0
offset_right = 48.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
columns = 10

[node name="VictoryProgressLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -204.0
offset_top = -150.0
offset_right = 197.0
offset_bottom = -95.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "Souls Collected = 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="TextureButton" parent="."]
unique_name_in_owner = true
self_modulate = Color(1, 0.596078, 0.0705882, 1)
offset_top = 20.0
offset_right = 100.0
offset_bottom = 120.0
texture_normal = ExtResource("5_somnn")
texture_pressed = ExtResource("5_somnn")
texture_hover = ExtResource("5_somnn")
texture_disabled = ExtResource("5_somnn")
texture_focused = ExtResource("5_somnn")
